Clean buffers before closing the input device.

Input device handle is invalid after waveInClose()
QTBUG-24119

Change-Id: I3b2554f816f5ca66be4d992a0a579561639caf9f
Reviewed-by: Michael Goddard <michael.goddard@nokia.com>